--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <section class="solutions">
                 <div class="card-1">
                     <img src="./images/solutions-img/cartera-de-pago.svg" alt="solution-1">
-                    <p>Lorem ipsum dolor sasdasdasdadasdasdasdasdadaqdqweqweqweit am</p>
+                    <p>Lorem ipsum dolor sit amet consectetur , atque? asdasdadasding elit Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem eaque delectus, eum fugit earum libero nihil. Magnam amet suscipit rem!</p>
                 </div>
                 <div class="card-2">
                     <img src="./images/solutions-img/cartera-de-pago.svg" alt="solution-2">
