Update Main->Section Cards 2

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <img src="./images/svg/undraw_server_status_re_n8ln.svg" alt="TecnoIt">
             </div>
             <div class="header-content">
-                <h1>Tecno It</h1>
+                <h1 class="h1">Tecno It</h1>
                 <p>¿Buscás soluciones tecnológicas para tu empresa?</p>´
                 <p class="switch">Mirá todos nuestros servicios a continuación</p>
                 <button>Mas Informacion</button>
@@ -55,13 +55,14 @@
 
         <!-- MAIN -->
         <main class="main">
+            <h1 class="h1">Nuestros Servicios</h1>
             <section class="solutions">
                 <div class="card-1">
-                    <img src="./images/solutions-img/cartera-de-pago.svg" alt="solution-1">
-                    <p>Lorem ipsum dolor sit amet consectetur , atque? asdasdadasding elit Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem eaque delectus, eum fugit earum libero nihil. Magnam amet suscipit rem!</p>
+                    <img src="./images/solutions-img/ciberseguridad.jpg" alt="solution-1">
+                    <p><span>Cuidamos tus datos con metodologías de seguridad exhaustiva </span>Lt earum libero nihil. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi, molestias. olor numquam amet corporis totam. rem!</p>
                 </div>
                 <div class="card-2">
-                    <img src="./images/solutions-img/cartera-de-pago.svg" alt="solution-2">
+                    <img src="./images/solutions-img/servidores-web.jpg" alt="Hosting Web Servidores">
                     <p>Lorem ipsum dolor sit amet consectetur , atque? asdasdadasding elit.</p>
                 </div>
                 <div class="card-3">
