--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <!-- HEADER -->
         <header class="header">
             <div class="header-logo">
-                <img src="./images/svg/undraw_server_status_re_n8ln.svg" alt="TecnoIt">
+                <img src="./images/header-logo.svg" alt="TecnoIt">
             </div>
             <div class="header-content">
                 <h1 class="h1">Tecno It</h1>
                 <p>¿Buscás soluciones tecnológicas para tu empresa?</p>´
-                <p class="switch">Mirá todos nuestros servicios a continuación</p>
-                <button>Mas Informacion</button>
+                <p>Mirá todos nuestros servicios a continuación</p>
+                <button class="button-primary">Mas Informacion</button>
             </div>
         </header>
         <!-- HEADER -->
@@ -59,15 +59,18 @@
             <section class="solutions">
                 <div class="card-1">
                     <img src="./images/solutions-img/ciberseguridad.jpg" alt="solution-1">
-                    <p><span>Cuidamos tus datos con metodologías de seguridad exhaustiva </span>Lt earum libero nihil. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi, molestias. olor numquam amet corporis totam. rem!</p>
+                    <p><span>Cuidamos tus datos con metodologías de seguridad exhaustiva </span>Lt earum libero nihil. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ...</p>
+                    <button class="button-primary">+ info</button>
                 </div>
                 <div class="card-2">
                     <img src="./images/solutions-img/servidores-web.jpg" alt="Hosting Web Servidores">
-                    <p>Lorem ipsum dolor sit amet consectetur , atque? asdasdadasding elit.</p>
+                    <p><span>Guardamos todos tus datos en nuestros nube</span>Lt earum libero nihil. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ...</p>
+                    <button class="button-primary">+ info</button>
                 </div>
                 <div class="card-3">
-                    <img src="./images/solutions-img/cartera-de-pago.svg" alt="solution-3">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisici Lorem ipsum dolor.</p>
+                    <img src="./images/solutions-img/marketing-y-seo.jpg" alt="solution-3">
+                    <p><span>Hace que tu empresa crezca con nuestra implemetancion de Marketing y Seo</span>Lt earum libero nihil. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ...</p>
+                    <button class="button-primary">+ info</button>
                 </div>
             </section>
         </main>
