create form contact

--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
 
             <nav class="nav">
                 <ul>
-                    <a href="index.html"><li>inicio</li><a/>
-                    <a href="register.html"><li>registrarse</li><a/>
-                    <a href="login.html"><li>logearse</li></a>
+                    <a href="index.html">
+                        <li>inicio</li><a />
+                        <a href="register.html">
+                            <li>registrarse</li><a />
+                            <a href="login.html">
+                                <li>logearse</li>
+                            </a>
                 </ul>
 
             </nav>
@@ -116,8 +120,24 @@
 
             </section>
             <!-- Bussines -->
+
+
         </main>
         <!-- MAIN -->
+
+        <!-- FORM -->
+        <div class="container-from">
+            <form action="" class="form">
+                <h1 class="h1">Contacto</h1>
+                <label for="name" class="label">Nombre: </label>
+                <input type="text" name="name" class="input">
+                <label for="email" class="label">Email: </label>
+                <input type="email" name="email" class="input">
+                <textarea name="mensaje" rows="10" placeholder="Escriba su mensaje"></textarea>
+                <button class="button-primary">Entrar</button>
+            </form>
+        </div>
+        <!-- FORM -->
 
         <!-- FOOTER -->
         <footer class="footer">
