--- a/login.html
+++ b/login.html
@@ -40,6 +40,19 @@
         </div>
         <!-- NAVIGATION -->
 
+         <!-- FORM -->
+         <div class="container-from">
+            <form action="" class="form">
+                <h2 class="h1">Login</h2>
+                <label for="name" class="label">Nombre: </label>
+                <input type="text" name="name" class="input">
+                <label for="password" class="label">Password: </label>
+                <input type="password" name="password" class="input">
+                <button class="button-primary">Entrar</button>
+            </form>
+        </div>
+        <!-- FORM -->
+
         <!-- FOOTER -->
         <footer class="footer">
             <p>Todos los derechos reservados</p>
