add register and finish bussines

--- a/index.html
+++ b/index.html
@@ -19,13 +19,9 @@
 
             <nav class="nav">
                 <ul>
-                    <a href="index.html">
-                        <li>inicio</li><a />
-                        <a href="">
-                            <li>registrarse</li><a />
-                            <a href="">
-                                <li>logearse</li>
-                            </a>
+                    <a href="index.html"><li>inicio</li><a/>
+                    <a href="register.html"><li>registrarse</li><a/>
+                    <a href="login.html"><li>logearse</li></a>
                 </ul>
 
             </nav>
@@ -90,7 +86,7 @@
 
                 <div class="services">
                     <div class="logo">
-                        <img src="./images/icons-bussines/services.PNG">
+                        <img src="./images/icons-bussines/services.svg">
                     </div>
                     <div class="content">
                         <h2 class="h2">Servicios</h2>
@@ -100,7 +96,7 @@
 
                 <div class="clients">
                     <div class="logo">
-                        <img src="./images/icons-bussines/services.PNG">
+                        <img src="./images/icons-bussines/clients.svg">
                     </div>
                     <div class="content">
                         <h2 class="h2">Clientes</h2>
@@ -110,7 +106,7 @@
 
                 <div class="projects">
                     <div class="logo">
-                        <img src="./images/icons-bussines/services.PNG">
+                        <img src="./images/icons-bussines/projects.svg">
                     </div>
                     <div class="content">
                         <h2 class="h2">Proyectos</h2>
@@ -125,8 +121,7 @@
 
         <!-- FOOTER -->
         <footer class="footer">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione nesciunt veritatis molestiae qui sint
-            nulla et quam aliquam ullam aperiam?
+            <p>Todos los derechos reservados</p>
         </footer>
         <!-- FOOTER -->
     </div>
